# EventManage

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  event.h  event_manager.c  event_manager.h  event_manager_center.c  event_manager_center.h  event_test.c  event_test.h  led.c  led.h  main.c
EM/: CMakeLists.txt  event.h  event_manager.c  event_manager.h
lcd/: CMakeLists.txt  led.c  led.h
test/: CMakeLists.txt  event_test.c  event_test.h
